--- a/views/auth/logout.hbs
+++ b/views/auth/logout.hbs
@@ -1,5 +1,13 @@
+<nav>
+  <ul>
+    <li><a href="/auth/login">LOGIN</a></li>
+    <li><a href="/auth/signup">SIGNUP</a></li>
+    <li><a href="/auth/logout">LOGOUT</a></li>
+    <li><a href="/">HOME</a></li>
 
+  </ul>
+</nav>
 
+<H1>LOG OUT PAGE</H1>
 
-
-
+{{errorMessage}}
