--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,13 +1,21 @@
-<form action="/auth/signup" method="POST">
-   <label for="username">username</label>
-   <input type="text" id="username" name="username">
-   <label for="password">password</label>
-   <input type="password" id="password" name="password">
+<nav>
+   <ul>
+      <li><a href="/auth/login">LOGIN</a></li>
+      <li><a href="/auth/signup">SIGNUP</a></li>
+      <li><a href="/auth/logout">LOGOUT</a></li>
+      <li><a href="/">HOME</a></li>
 
-   <button type="submit">Submit</button>
-</form>
+   </ul>
 
+   <h1>YOU ARE IN SIGNUP PAGE</h1>
+   <form action="/auth/signup" method="POST">
+      <label for="email">email</label>
+      <input type="text" id="username" name="email">
+      <label for="password">password</label>
+      <input type="password" id="password" name="password">
 
+      <button type="submit">Submit</button>
+   </form>
 
-
-
+   {{errorMessage}}
+</nav>
