--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<nav>
+  <ul>
+    <li><a href="/auth/login">LOGIN</a></li>
+    <li><a href="/auth/signup">SIGNUP</a></li>
+    <li><a href="/auth/logout">LOGOUT</a></li>
+    <li><a href="/">HOME</a></li>
+
+  </ul>
+</nav>
