--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -1,7 +1,13 @@
-<h3>Create a new receipe</h3>
+<h3>Create a new receipt</h3>
 
-<form action="/main/new-receipe" method="POST">
-  <label for="">Body of the post</label>
+<form action="/main/new-receipt" method="POST">
+
+  <form method="POST" action="/upload" enctype="multipart/form-data">
+    <input type="file" name="imageUrl" accept="image/png, image/jpg">
+    <button type="submit">Submit</button>
+  </form>
+
+  <label for="">Title</label>
   <input type="text" name="body">
   <button type="submit">Create your receipt</button>
 </form>
