some error in signup form

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -10,9 +10,19 @@
    <h1>YOU ARE IN SIGNUP PAGE</h1>
    <form action="/auth/signup" method="POST">
       <label for="email">email</label>
-      <input type="text" id="username" name="email">
+      <input type="text" id="email" name="email">
       <label for="password">password</label>
       <input type="password" id="password" name="password">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name">
+      <label for="surname">Surname</label>
+      <input type="text" id="surname" name="surname">
+      <label for="taxId">Tax ID</label>
+      <input type="text" id="taxId" name="taxId">
+      <label for="companyName">Company Name</label>
+      <input type="text" id="companyName" name="companyName">
+      <label for="companyAdress">Company Address</label>
+      <input type="text" id="companyAdress" name="companyAdress">
 
       <button type="submit">Submit</button>
    </form>
