--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="/auth/main">BACK TO OVERVIEW</a></li>
+    <li><a href="/overview-receipts">BACK TO OVERVIEW</a></li>
     <li><a href="/auth/logout">LOGOUT</a></li>
 
     <h1>PROFILE DETAILS</h1>
