--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -4,10 +4,23 @@
 
   <form method="POST" action="/upload" enctype="multipart/form-data">
     <input type="file" name="imageUrl" accept="image/png, image/jpg">
-    <button type="submit">Submit</button>
+    <button type="submit">Save Image</button>
   </form>
 
   <label for="">Title</label>
-  <input type="text" name="body">
+  <input type="text" name="title">
+
+  <label for="">Category</label>
+  <input type="text" name="category">
+
+  <label for="">Date</label>
+  <input type="date" name="date">
+
+  <label for="">Amount in €</label>
+  <input type="number" name="amount">
+
+  <label for="">Comment</label>
+  <input type="text" name="comment">
+
   <button type="submit">Create your receipt</button>
 </form>
