--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -5,7 +5,7 @@
 
 <a href="#/rides">Check your Rides</a>
 
-<a href="/newReceipt">Create a new Receipt</a>
+<a href="/main/new-receipt">Create a new Receipt</a>
 
 {{#each receipts}}
 
@@ -15,8 +15,8 @@
   <h4>{{category}}</h4>
   <h4>{{date}}</h4>
   <a href="/receipts/{{id}}">See details</a>
-  <a href="/profile/update-receipt">Update receipt</a>
-  <a href="/profile/delete-receipt">Delete receipt</a>
+  <a href="/main/update-receipt">Update receipt</a>
+  <a href="/main/delete-receipt">Delete receipt</a>
 </div>
 
 {{/each}}
