added profile edit

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -7,10 +7,17 @@
 
     <ul>
       <li>Email:{{user.email}}</li>
+      <br><br>
       <li>Name:{{user.name}}</li>
+      <br><br>
       <li>Surname:{{user.surname}}</li>
+      <br><br>
       <li>Tax ID:{{user.taxId}}</li>
+      <br><br>
       <li>Company Name:{{user.companyName}}</li>
+      <br><br>
       <li>Company Address:{{user.companyAdress}}</li>
+      <br><br>
 
     </ul>
+    <a href="/profile/edit">EDIT YOUR PROFILE</a>
