finished the edit part with routes, needs to do the authorisation for each part

--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -14,7 +14,7 @@
       <li>Company Address:{{user.companyAdress}}</li>
 
     </ul> --}}
-    <form action="/edit-profile" method="POST">
+    <form action="/profile/edit" method="POST">
       {{!-- <label for="email">email</label>
       <input type="text" id="email" name="email" value={{user.email}}>
       <br>
