--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -1,5 +1,5 @@
 <a href="/profile">Check your profile</a>
-<a href="/logout">Logout</a>
+<a href="/auth/logout">Logout</a>
 
 <h1>Your Receipts</h1>
 
