--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -2,6 +2,7 @@
 <a href="/auth/logout">Logout</a>
 
 <h1>Your Receipts</h1>
+<h2>Sort by:<button id="sort-date">DATE</button></h2>
 
 <a href="#/rides">Check your Rides</a>
 
