--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -2,8 +2,29 @@
 <a href="/auth/logout">Logout</a>
 
 <h1>Your Receipts</h1>
-<h2>Sort by:<button id="sort-date">DATE</button></h2>
-
+<h2>Sort by:
+  <select id="sort" name="sort" value="date">
+    <option value="date">Date</option>
+    <option value="category">Category</option>
+    <option value="amount">Amount</option>
+    <option value="title">Title</option>
+  </select>
+  <select id="direction" name="direction" value="">
+    <option value="">Ascending</option>
+    <option value="-">Descending</option>
+  </select>
+  Show:
+  <select id="category" name="category" value="All categories">
+    <option value="all categories">All categories</option>
+    <option value="work euipment">Work equipment</option>
+    <option value="workspace">Workspace</option>
+    <option value="car">Car</option>
+    <option value="hardware">Hardware</option>
+    <option value="software">Software</option>
+    <option value="catering">Catering</option>
+    <option value="other">Other</option>
+  </select>
+</h2>
 <a href="#/rides">Check your Rides</a>
 
 <a href="/main/new-receipt">Create a new Receipt</a>
