filter and match  function in overview is working

--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -15,7 +15,7 @@
       <option value="-">Descending</option>
     </select>
     Show:
-    <select id="category" name="category" value="All categories">
+    <select id="category" name="category" value="">
       <option value="">All categories</option>
       <option value="work euipment">Work equipment</option>
       <option value="workspace">Workspace</option>
