receipt part is fully working

--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -10,8 +10,15 @@
   <input type="text" name="title">
   <br>
   <label for="">Category</label>
-  <input type="text" name="category">
-  <p>Possible Categories: work euipment, workspace, car, hardware, software, catering, other</p>
+  <select id="category" name="category" value="work euipment">
+    <option value="work euipment">Work equipment</option>
+    <option value="workspace">Workspace</option>
+    <option value="car">Car</option>
+    <option value="hardware">Hardware</option>
+    <option value="software">Software</option>
+    <option value="catering">Catering</option>
+    <option value="other">Other</option>
+  </select>
   <br>
   <label for="">Date</label>
   <input type="date" name="date">
