--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -40,8 +40,8 @@
   <h4>{{this.category}}</h4>
   <h4>{{this.date}}</h4>
   <a href="/main/{{_id}}">See details</a>
-  <a href="/main/update-receipt">Update receipt</a>
-  <a href="/main/delete-receipt">Delete receipt</a>
+  <a href="/main/{{_id}}/update-receipt">Update receipt</a>
+  <a href="/main/{{_id}}/delete-receipt">Delete receipt</a>
 </div>
 
 {{/each}}
