--- a/views/update-receipt.hbs
+++ b/views/update-receipt.hbs
@@ -5,25 +5,24 @@
 
 <h1>EDIT RECEIPT</h1>
 
-<form action="/main/update-receipt" method="POST" enctype="multipart/form-data">
-  <label for="">Image</label>
-  <input type="file" name="image" accept="image/png, image/jpg">
-  <br>
+<form action="/main/{{receiptDetails._id}}/update-receipt" method="POST" enctype="multipart/form-data">
   <label for="">Title</label>
-  <input type="text" name="title" value="{{receipts.name}}">
+  <input type="text" name="title" value="{{receiptDetails.title}}">
   <br>
   <label for="">Category</label>
-  <input type="text" name="category" value="{{receipts.category}}">
+  <input type="text" name="category" value="{{receiptDetails.category}}">
   <p>Possible Categories: work euipment, workspace, car, hardware, software, catering, other</p>
   <br>
   <label for="">Date</label>
-  <input type="date" name="date" value="{{receipts.date}}">
+  <input type="date" name="date" value="{{receiptDetails.date}}">
   <br>
   <label for="">Amount in €</label>
-  <input type="number" name="amount" value="{{receipts.amount}}">
+  <input type="number" name="amount" value="{{receiptDetails.amount}}">
   <br>
   <label for="">Comment</label>
-  <input type="text" name="comment" value="{{receipts.comment}}">
+  <input type="text" name="comment" value="{{receiptDetails.comment}}">
   <br>
   <button type="submit">Update your receipt</button>
 </form>
+
+<img src="{{receiptDetails.image}}" alt="receipt image">
