--- a/views/update-receipt.hbs
+++ b/views/update-receipt.hbs
@@ -5,7 +5,7 @@
 
 <h1>EDIT RECEIPT</h1>
 
-<form action="/main/{{receiptDetails._id}}/update-receipt" method="POST" enctype="multipart/form-data">
+<form action="/main/{{receiptDetails._id}}/update-receipt" method="POST">
   <label for="">Title</label>
   <input type="text" name="title" value="{{receiptDetails.title}}">
   <br>
