popup and joke api

--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -29,5 +29,17 @@
   <label for="">Comment</label>
   <input type="text" name="comment">
   <br>
-  <button type="submit">Create your receipt</button>
+  <button id="myBtn" type="submit">Create your receipt</button>
 </form>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <img src="{{jokeImage}}" alt="Chuck Norris Icon">
+    <p>{{jokeText}}</p>
+  </div>
+
+</div>
