--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -23,5 +23,11 @@
 <br>
 <h3>New user? <a href="/auth/signup">Register</a></h3>
 
+<h1>This is a test H1</h1>
+<h2>This is a test H2</h2>
+<h3>This is a test H3</h3>
+<h4>This is a test H4</h4>
+
+
 {{infoMessage}}
 {{errorMessage}}
