added the nav bar with dropdown at the layout.hbs

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,4 +1,4 @@
-<nav>
+{{!-- <nav>
    <ul>
       <li><a href="/auth/login">LOGIN</a></li>
       <li><a href="/auth/signup">SIGNUP</a></li>
@@ -6,7 +6,25 @@
 
 
    </ul>
-</nav>
+</nav> --}}
+{{!-- Added the nav bar --}}
+{{!-- <div class="nav-nav--login">
+
+
+   <div class="nav-dropdown--login" style="left:0">
+      <button class="nav-dropbtn--login"><img src="/images/whitehome.png" alt="" style="height: 30px;"></button>
+   </div>
+   <div class="nav-dropdown--login" style="right:0">
+      <button class="nav-dropbtn--login"><img src="/images/Burger-menu-white.png" alt="" style="height: 30px;"></button>
+      <div class="dropdown-content">
+         <a href="/overview-receipts">OVERVIEW</a>
+         <a href="/profile">PROFILE</a>
+         <a href="/auth/logout">LOGOUT</a>
+      </div>
+   </div>
+</div> --}}
+{{!-- End of the added navbar --}}
+
 <br>
 <H1>Welcome to GOceipt</H1>
 <h3>Organize your receipts and rides on the Go and do your tax declaration in one click</h3>
