--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,22 @@
 </head>
 
 <body>
+   <div class="nav-nav--login">
 
+
+      <div class="nav-dropdown--login" style="left:0">
+         <button class="nav-dropbtn--login"><img src="/images/whitehome.png" alt="" style="height: 30px;"></button>
+      </div>
+      <div class="nav-dropdown--login" style="right:0">
+         <button class="nav-dropbtn--login"><img src="/images/Burger-menu-white.png" alt=""
+               style="height: 30px;"></button>
+         <div class="dropdown-content">
+            <a href="/overview-receipts">OVERVIEW</a>
+            <a href="/profile">PROFILE</a>
+            <a href="/auth/logout">LOGOUT</a>
+         </div>
+      </div>
+   </div>
    {{{body}}}
 
    <script src="/javascripts/script.js"></script>
