--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,8 @@
 
 
       <div class="nav-dropdown--login" style="left:0">
-         <button class="nav-dropbtn--login"><img src="/images/whitehome.png" alt="" style="height: 30px;"></button>
+         <a href="/auth/login"><button class="nav-dropbtn--login"><img src="/images/whitehome.png" alt=""
+                  style="height: 30px;"></button></a>
       </div>
       <div class="nav-dropdown--login" style="right:0">
          <button class="nav-dropbtn--login"><img src="/images/Burger-menu-white.png" alt=""
@@ -26,6 +27,7 @@
          </div>
       </div>
    </div>
+   <div class="nav-title">{{pageTitle}}</div>
    {{{body}}}
 
    <script src="/javascripts/script.js"></script>
