--- a/views/overview-receipts.hbs
+++ b/views/overview-receipts.hbs
@@ -1,31 +1,38 @@
-<h2>Sort by:
-  <form action="/overview-receipts/search" method="post">
-    <select id="sort" name="sort" value="date">
-      <option value="date">Date</option>
-      <option value="category">Category</option>
-      <option value="amount">Amount</option>
-      <option value="title">Title</option>
-    </select>
-    <select id="direction" name="direction" value="direction">
-      <option value="">Ascending</option>
-      <option value="-">Descending</option>
-    </select>
-    Show:
-    <select id="category" name="category" value="">
-      <option value="">All categories</option>
-      <option value="work euipment">Work equipment</option>
-      <option value="workspace">Workspace</option>
-      <option value="car">Car</option>
-      <option value="hardware">Hardware</option>
-      <option value="software">Software</option>
-      <option value="catering">Catering</option>
-      <option value="other">Other</option>
-    </select>
-    <button type="submit">Search</button>
-  </form>
-</h2>
+{{! FILTER AND SORT}}
+<section id="section-filter-sort">
 
-<a href="/main/new-receipt">Create a new Receipt</a>
+  <form id="form-filter-sort" action="/overview-receipts/search" method="post">
+
+    <div id="filter">
+      <select id="category" name="category" value="">
+        <option value="">All categories</option>
+        <option value="work euipment">Work equipment</option>
+        <option value="workspace">Workspace</option>
+        <option value="car">Car</option>
+        <option value="hardware">Hardware</option>
+        <option value="software">Software</option>
+        <option value="catering">Catering</option>
+        <option value="other">Other</option>
+      </select>
+      <button type="submit">Filter</button>
+    </div>
+
+    <div id="sort">
+      <select id="sort" name="sort" value="date">
+        <option value="date">Date</option>
+        <option value="category">Category</option>
+        <option value="amount">Amount</option>
+        <option value="title">Title</option>
+      </select>
+      <select id="direction" name="direction" value="direction">
+        <option value="">Ascending</option>
+        <option value="-">Descending</option>
+      </select>
+    </div>
+
+  </form>
+
+</section>
 
 
 {{#each receipts}}
@@ -41,3 +48,6 @@
 </div>
 
 {{/each}}
+
+{{! ADD NEW RECEIPT}}
+<a href="/main/new-receipt">Create a new Receipt</a>
