--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,6 +102,16 @@ a {
   color: white;
   border-style: none;
   padding: 5px 10px;
+  text-decoration: none;
+}
+.profile-submitbtn {
+  background-color: var(--secondary-color);
+  color: white;
+  border-style: none;
+  padding: 5px 10px;
+  text-decoration: none;
+  width: 100px;
+  margin: 20px;
 }
 
 .login-container-title {
@@ -268,6 +278,13 @@ img {
 
 .details-receipt-container {
   height: 85vh;
+  width: 100%;
+  display: flex;
+
+  flex-direction: column;
+}
+.profile-container {
+  height: 250px;
   width: 100%;
   display: flex;
 
