--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,10 +10,10 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 h1 {
-  font-size: 4rem;
+  font-size: 1rem;
   margin: 20px;
   color: white;
 }
@@ -245,7 +245,7 @@ img {
 }
 
 #filter {
-  width: 50%;
+  width: 33%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -255,7 +255,7 @@ img {
 }
 
 #sort {
-  width: 50%;
+  width: 66%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -273,6 +273,7 @@ img {
   color: grey;
   border: none;
   background-color: white;
+  box-shadow: 4px 4px purple;
   margin-right: 5%;
 }
 
@@ -281,6 +282,8 @@ img {
   color: grey;
   border: none;
   background-color: white;
+  box-shadow: 4px 4px purple;
+  margin-right: 5%;
 }
 
 #category {
@@ -288,6 +291,7 @@ img {
   color: grey;
   border: none;
   background-color: white;
+  box-shadow: 4px 4px purple;
 }
 
 #sort button {
@@ -425,16 +429,22 @@ img {
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: black;
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
+  border: 1px solid var(--primary-color);
   width: 80%;
+}
+
+#img-chuck-norris-flames {
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: var(--secondary-color);
   float: right;
   font-size: 28px;
   font-weight: bold;
