--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -1,45 +1,43 @@
-<a href="/">HOME</a>
+<div class="details-receipt-container">
+  <form class="update-receipt-form" action="/main/new-receipt" method="POST" enctype="multipart/form-data">
+    <label for="">Image</label>
+    <input type="file" name="image" accept="image/png, image/jpg">
 
-<h3>Create a new receipt</h3>
+    <label for="">Title</label>
+    <input type="text" name="title">
 
-<form action="/main/new-receipt" method="POST" enctype="multipart/form-data">
-  <label for="">Image</label>
-  <input type="file" name="image" accept="image/png, image/jpg">
-  <br>
-  <label for="">Title</label>
-  <input type="text" name="title">
-  <br>
-  <label for="">Category</label>
-  <select id="category" name="category" value="work euipment">
-    <option value="work euipment">Work equipment</option>
-    <option value="workspace">Workspace</option>
-    <option value="car">Car</option>
-    <option value="hardware">Hardware</option>
-    <option value="software">Software</option>
-    <option value="catering">Catering</option>
-    <option value="other">Other</option>
-  </select>
-  <br>
-  <label for="">Date</label>
-  <input type="date" name="date">
-  <br>
-  <label for="">Amount in €</label>
-  <input type="number" name="amount">
-  <br>
-  <label for="">Comment</label>
-  <input type="text" name="comment">
-  <br>
-  <button id="myBtn" type="submit">Create your receipt</button>
-</form>
+    <label for="">Category</label>
+    <select id="category" name="category" value="work euipment">
+      <option value="work euipment">Work equipment</option>
+      <option value="workspace">Workspace</option>
+      <option value="car">Car</option>
+      <option value="hardware">Hardware</option>
+      <option value="software">Software</option>
+      <option value="catering">Catering</option>
+      <option value="other">Other</option>
+    </select>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
+    <label for="">Date</label>
+    <input type="date" name="date">
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <img src="{{jokeImage}}" alt="Chuck Norris Icon">
-    <p>{{jokeText}}</p>
+    <label for="">Amount in €</label>
+    <input type="number" name="amount">
+
+    <label for="">Comment</label>
+    <input type="text" name="comment">
+
+    <button class="profile-submitbtn" id="myBtn" type="submit">Create your receipt</button>
+  </form>
+
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img src="{{jokeImage}}" alt="Chuck Norris Icon">
+      <p>{{jokeText}}</p>
+    </div>
+
   </div>
-
 </div>
