changes in layout

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -39,7 +39,7 @@
    <div class="login-container-title box-shadow">
       <h4 class=>Everything is Possible</h4>
       <img src="/images/with-chuck-norris_small.png" alt="" style="width:170px;">
-      <h4>even bring order to your receipts</h4>
+      <h4>even bringing order to your receipts</h4>
 
    </div>
    <div class="login-register-img-block">
