--- a/views/new-receipt.hbs
+++ b/views/new-receipt.hbs
@@ -35,8 +35,8 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <img src="{{jokeImage}}" alt="Chuck Norris Icon">
       <p>{{jokeText}}</p>
+      <img id="img-chuck-norris-flames" src="/images/Modal-Chuck-Norris-Flames.png" alt="Chuck Norris in Flames">
     </div>
 
   </div>
