--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,8 +14,9 @@
 }
 h1 {
   font-size: 1rem;
-  margin: 20px;
+  margin: 15px;
   color: white;
+  text-transform: capitalize;
 }
 
 h2 {
@@ -52,8 +53,9 @@ a {
   display: block;
   background-color: var(--primary-color);
   text-align: center;
-  height: 5vh;
-  min-height: 30px;
+  height: 30px;
+  min-height: 20px;
+  min-width: 400px;
   margin: 0;
   color: white;
   border: none;
@@ -62,8 +64,12 @@ a {
 .nav-nav--login {
   background-color: var(--primary-color);
   /* height: 54px; */
-  height: 10vh;
-  min-height: 54px;
+  height: 1vh;
+  min-height: 48px;
+  min-width: 400px;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
 /* Dropdown copy pasted */
@@ -118,7 +124,7 @@ a {
 .login-container-title {
   background-color: black;
   min-width: 350px;
-  max-width: 400px;
+  max-width: 380px;
   margin: 25px;
   height: 200px;
   display: flex;
@@ -150,16 +156,17 @@ a {
 }
 .signup-register-img-block {
   margin: 0 auto;
-  width: 400px;
+  width: 300px;
 }
 
 .login-register-img-block a img {
   position: absolute;
   bottom: 0;
 }
-.signup-register-img-block a img {
+.signup-register-img-block img {
   position: absolute;
   bottom: 0;
+  width: 300px;
 }
 
 img {
@@ -179,10 +186,11 @@ img {
 .nav-dropbtn--login {
   background-color: var(--primary-color);
   color: white;
-  padding: 10px;
+  padding: 10px 15px 5px 15px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  background-color: none;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -354,6 +362,16 @@ img {
 }
 
 #receipt-title-amount {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  /*background-color: white;*/
+  width: 100%;
+  height: 50%;
+}
+
+#receipt-category-date {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
