--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -25,7 +25,7 @@
          <button class="login-input-submitbtn" type="submit">Register</button>
       </form>
    </div>
-   {{errorMessage}}
+   <p>{{errorMessage}}</p>
    <div class="signup-register-img-block">
       <img src="/images/Chuck-norris-heros.png" alt="chuck norris as heros"></a>
    </div>
