fixed few css in login and sticky

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -27,6 +27,6 @@
    </div>
    {{errorMessage}}
    <div class="signup-register-img-block">
-      <a href=" /auth/signup"><img src="/images/Chuck-norris-heros.png" alt="" style="width:400px;"></a>
+      <img src="/images/Chuck-norris-heros.png" alt="" style="width:400px;">
    </div>
 </div>
