--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,10 @@ a {
   /* height: 54px; */
   height: 10vh;
   min-height: 54px;
+  min-width: 400px;
+  position: sticky;
+  /* top: 0; */
+  /* left: 0; */
 }
 
 /* Dropdown copy pasted */
@@ -118,7 +122,7 @@ a {
 .login-container-title {
   background-color: black;
   min-width: 350px;
-  max-width: 400px;
+  max-width: 380px;
   margin: 25px;
   height: 200px;
   display: flex;
@@ -390,6 +394,15 @@ img {
   font-size: 10px;
   text-transform: uppercase;
   width: 50%;
+}
+#receipt-category-date {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  /*background-color: white;*/
+  width: 100%;
+  height: 50%;
 }
 
 #text-date {
